32. Get Messages EndPoint
