# backend/api/docs/swagger.yaml
@@ -44,7 +44,7 @@ definitions:
         type: string
       content:
         type: string
-      recever:
+      receiver:
         type: string
       sender:
         type: string
@@ -131,33 +131,44 @@ info:
   title: Fiber Golang RestApi
   version: "1.0"
 paths:
-  /chat/sendmessage:
-    post:
+  /chat/getmsgsbynums:
+    get:
       consumes:
       - application/json
-      description: Sendmessage from one user to another
+      description: GetMsgsByNumbetween two users by pagenation
       parameters:
-      - description: use SendMessages
-        in: body
-        name: message
+      - description: Staring point page num
+        in: query
+        name: from
         required: true
-        schema:
-          $ref: '#/definitions/models.SendMessageM'
+        type: integer
+      - description: first user id
+        in: query
+        name: firstuid
+        required: true
+        type: string
+      - description: second user id
+        in: query
+        name: seconduid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.Message'
+            items:
+              $ref: '#/definitions/models.Message'
+            type: array
         "400":
           description: Bad Request
           schema:
             additionalProperties: true
             type: object
-      summary: Send Message To friend
+      summary: get message by pagenation
       tags:
-      - Authentication
+      - Chat
   /posts:
     get:
       consumes:
@@ -523,7 +534,7 @@ paths:
       - BearerAuth: []
       summary: Get Suggested User
       tags:
-      - U98sers
+      - Users
   /user/getUser/{id}:
     get:
       consumes:
